--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "studyhub",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "auto-prefixer": "^0.4.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.3.1"
-  }
+    "name": "my-react-app",
+    "version": "1.0.0",
+    "dependencies": {
+        "@heroicons/react": "^2.2.0",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "firebase": "^11.6.1",
+        "firebase-admin": "^13.3.0",
+        "mysql": "^2.18.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^6.21.3",
+        "styled-components": "^6.1.18",
+        "three": "^0.176.0",
+        "three-orbitcontrols": "^2.110.3"
+    },
+    "scripts": {
+        "start": "parcel src/index.html",
+        "build": "parcel build src/index.html"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.17",
+        "parcel": "^2.14.4",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1"
+    }
 }
