--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "firebase": "^9.23.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
